--- a/kafka-consumer/templates/messages.html
+++ b/kafka-consumer/templates/messages.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </head>
 <body>
     <div class="container-fluid">
@@ -44,80 +44,87 @@
                         Help & Information
                     </button>
                 </div>
-                
-                <!-- Help Modal -->
-                <div class="modal fade" id="helpModal" tabindex="-1" aria-labelledby="helpModalLabel" aria-hidden="true">
-                    <div class="modal-dialog modal-dialog-scrollable modal-wide">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="helpModalLabel">Platform, Model & Prompt Information</h5>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                            </div>
-                            <div class="modal-body">
-                                <!-- Model Info -->
-                                <p><strong>Platform: </strong><a href="https://console-openshift-console.apps.cluster-qbxx5.qbxx5.openshift.opentlc.com/k8s/ns/llms/pods"
-                                        target="_blank">OpenShift Container Platform</a></p>
-
-                                <!-- Model Info -->
-                                <p><strong>Model: </strong> <a href="https://huggingface.co/tiiuae/falcon-7b-instruct"
-                                        target="_blank">tiiuae/falcon-7b-instruct</a></p>
-                                
-                                <p><strong>Model & Platform: </strong> <a href="https://openshift-gitops-server-openshift-gitops.apps.cluster-qbxx5.qbxx5.openshift.opentlc.com/applications?showFavorites=false&proj=&sync=&autoSync=&health=&namespace=&cluster=&labels="
-                                        target="_blank">Falcon on OCP - Argo</a></p>
-                                        
-                                <!-- Prompt Info -->
-                                <p><strong>Prompt: </strong></p>
-                                Given the conversation below, extract key information in a structured and concise manner. The goal is to parse out
-                                identifiable details such as personal names, email addresses, phone numbers, and any specific concerns or requests
-                                mentioned. This extraction should culminate in a structured JSON output that includes the following fields:
-                                
-                                <p>- **Name**: The name(s) of the person(s) involved.</p>
-                                <p>- **Email**: Email address(es) mentioned.</p>
-                                <p>- **Phone Number**: Phone number(s) provided.</p>
-                                <p>- **Location**: Any specific locations mentioned in relation to the issue or service.</p>
-                                <p>- **Department**: The department or organization related if specified.</p>
-                                <p>- **Issue**: Brief description of the main issue(s) discussed.</p>
-                                <p>- **Service**: Specific service(s) mentioned in connection with the issue.</p>
-                                <p>- **Additional Information**: Any other relevant details or stakeholders mentioned.</p>
-                                <p>- **Detailed Description**: A comprehensive summary of the complaint or request, including any specific outcomes
-                                desired.</p>
-                                
-                                The response should adhere to privacy and ethical guidelines, simplifying the information while preserving its original
-                                context and meaning. Assumptions beyond the provided data should be avoided.
-                                
-                                Conversation Transcript:
-                                {conversation}
-                                
-                                Note: Ensure your response is concise, avoiding repetition. If similar points are made more than once, summarize them in
-                                a single statement, focusing on providing a clear and structured summary of the conversation's key details.
-                                
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                            </div>
-                        </div>
-                    </div>
+            </div>
+        </div>
+    </div>
+    <!-- Help Modal -->
+    <div class="modal fade" id="helpModal" tabindex="-1" aria-labelledby="helpModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable modal-wide">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="helpModalLabel">Platform, Model & Prompt Information</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                
-                <!-- Conversation Modal -->
-                <div class="modal fade" id="conversationModal" tabindex="-1" role="dialog" aria-labelledby="conversationModalLabel"
-                    aria-hidden="true">
-                    <div class="modal-dialog" role="document">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="conversationModalLabel">Conversation Content</h5>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                            </div>
-                            <div class="modal-body">
-                                <p id="conversationModalContent"></p>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                            </div>
-                        </div>
-                    </div>
+                <div class="modal-body">
+                    <!-- Model Info -->
+                    <p><strong>Platform: </strong><a
+                            href="https://console-openshift-console.apps.cluster-qbxx5.qbxx5.openshift.opentlc.com/k8s/ns/llms/pods"
+                            target="_blank">OpenShift Container Platform</a></p>
+    
+                    <!-- Model Info -->
+                    <p><strong>Model: </strong> <a href="https://huggingface.co/tiiuae/falcon-7b-instruct"
+                            target="_blank">tiiuae/falcon-7b-instruct</a></p>
+    
+                    <p><strong>Model & Platform: </strong> <a
+                            href="https://openshift-gitops-server-openshift-gitops.apps.cluster-qbxx5.qbxx5.openshift.opentlc.com/applications?showFavorites=false&proj=&sync=&autoSync=&health=&namespace=&cluster=&labels="
+                            target="_blank">Falcon on OCP - Argo</a></p>
+    
+                    <!-- Prompt Info -->
+                    <p><strong>Prompt: </strong></p>
+                    Given the conversation below, extract key information in a structured and concise manner. The goal is to
+                    parse out
+                    identifiable details such as personal names, email addresses, phone numbers, and any specific concerns
+                    or requests
+                    mentioned. This extraction should culminate in a structured JSON output that includes the following
+                    fields:
+    
+                    <p>- **Name**: The name(s) of the person(s) involved.</p>
+                    <p>- **Email**: Email address(es) mentioned.</p>
+                    <p>- **Phone Number**: Phone number(s) provided.</p>
+                    <p>- **Location**: Any specific locations mentioned in relation to the issue or service.</p>
+                    <p>- **Department**: The department or organization related if specified.</p>
+                    <p>- **Issue**: Brief description of the main issue(s) discussed.</p>
+                    <p>- **Service**: Specific service(s) mentioned in connection with the issue.</p>
+                    <p>- **Additional Information**: Any other relevant details or stakeholders mentioned.</p>
+                    <p>- **Detailed Description**: A comprehensive summary of the complaint or request, including any
+                        specific outcomes
+                        desired.</p>
+    
+                    The response should adhere to privacy and ethical guidelines, simplifying the information while
+                    preserving its original
+                    context and meaning. Assumptions beyond the provided data should be avoided.
+    
+                    Conversation Transcript:
+                    {conversation}
+    
+                    Note: Ensure your response is concise, avoiding repetition. If similar points are made more than once,
+                    summarize them in
+                    a single statement, focusing on providing a clear and structured summary of the conversation's key
+                    details.
+    
                 </div>
-
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <!-- Conversation Modal -->
+    <div class="modal fade" id="conversationModal" tabindex="-1" role="dialog" aria-labelledby="conversationModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="conversationModalLabel">Conversation Content</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body chat-container" id="conversationModalContent">
+                    <!-- Chat bubbles will be added here dynamically -->
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
             </div>
         </div>
     </div>
